--- a/src/css/icon.css
+++ b/src/css/icon.css
@@ -28,7 +28,7 @@
 .icon-volume-mute:before {
   content: "\ea26";
   font-size: 16px;
-  color: #5f5f5f;
+  color: #fff;
 }
 .icon-volume-mute:before {
   content: "\ea2a";
